--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,4 +68,20 @@ h2 {
     height: 600px;
     width: 100%;
     background: url('../images/hero-image.webp') no-repeat center center;
+    /* Animation for loading page */
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+
+/* Creation of zoom */
+
+@keyframes hero-zoom {
+    from {
+        transform: scale (1);
+    }
+
+    to {
+        transform: scale(1.1);
+    }
 }
