--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,11 @@ h2 {
     overflow: hidden;
 }
 
+#cover-text,
+#cover-text h2 {
+    color: #fff;
+}
+
 #hero-image {
     height: 600px;
     width: 100%;
@@ -84,4 +89,14 @@ h2 {
     to {
         transform: scale(1.1);
     }
+}
+
+#cover-text {
+    font-size: 130%;
+    font-family: Oswald, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+
+    width: 300px;
+    height: 200px;
 }
