--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,8 @@ h2 {
     height: 600px;
     width: 100%;
     overflow: hidden;
+
+    position: relative;
 }
 
 #cover-text,
@@ -99,4 +101,14 @@ h2 {
 
     width: 300px;
     height: 200px;
+
+    padding-top: 40px;
+    padding-left: 10px;
+
+    background-color: rgba(241, 109, 107, .7);
+
+    bottom: 30px;
+    right: 150px;
+
+    position: absolute;
 }
